# tlvpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  library.json
examples/: 01_CPP_USAGE.md
include/: byte_order.h  data.h  key_list.h  tlv_box.h  tlvpp.h  win_endian.h
src/: key_list.c  tlv_box.c  tlvpp.cpp
tests/: ext_test.cpp  tlvpp.cpp
